# android-opencv

./: .gitignore  README.md  build.gradle  config.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ixyxj/opencv/samples/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ixyxj/opencv/samples/: App.kt  ExcelParsingActivity.kt  MainActivity.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_excel_parsing.xml  activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml
app/src/test/java/com/ixyxj/opencv/samples/: ExampleUnitTest.kt
cv32-java/: bintray.gradle
cv32-native/: CMakeLists.txt  bintray.gradle
cv34-java/: bintray.gradle
cv34-java/src/androidTest/java/com/ixyxj/opencv/: ExampleInstrumentedTest.java
cv34-java/src/main/: AndroidManifest.xml
cv34-java/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  CameraGLSurfaceView.java  JavaCameraView.java
cv34-java/src/test/java/com/ixyxj/opencv/: ExampleUnitTest.java
cv34-native/: CMakeLists.txt  bintray.gradle  build.gradle
cv34-native/src/androidTest/java/com/ixyxj/cv34/: ExampleInstrumentedTest.java
cv34-native/src/main/: AndroidManifest.xml
cv34-native/src/main/res/values/: strings.xml
cv34-native/src/test/java/com/ixyxj/cv34/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
table-identification/: CMakeLists.txt  build.gradle
table-identification/src/androidTest/java/com/ixyxj/cv3/table/: ExampleInstrumentedTest.java
table-identification/src/main/: AndroidManifest.xml
table-identification/src/main/cpp/: native-lib.cpp
table-identification/src/main/java/com/ixyxj/cv3/table/: JniUtil.java
table-identification/src/main/res/values/: strings.xml
table-identification/src/test/java/com/ixyxj/cv3/table/: ExampleUnitTest.java
